# grasp-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  cspell.json  hello.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: check-bash-path.sh  check-read-path.sh  check-write-path.sh  test_hooks.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: publish-legacy.yml  workflow.yml
configs/logging/: default.yaml
examples/notebooks/: agents_demo_3.ipynb
legacy/: .env.example  pyproject.toml
legacy/tests/: test_litellm_model_specific_settings.py  test_llm_policy_executor_after_generate_hook.py  test_telemetry_exporters.py
phoenix/: docker-compose.yml
scripts/: test_web_fetch.py  test_web_fetch_roundtrip.py
src/grasp_agents/: __init__.py  _event_render.py  agent_loop.py  agent_tool.py  background_tasks.py  cloud_llm.py  comm_processor.py  console.py  env_section.py  errors.py  event_bus.py  fallback_llm.py  function_tool.py  generics_utils.py  grasp_logging.py  hooks.py  inbox.py  llm.py  llm_agent.py  llm_agent_memory.py  llm_policy_executor.py  llm_responses.py  llm_stream_converter.py  logprob_converters.py  mailbox.py  packet.py  packet_pool.py  printer.py  processor.py  prompt_builder.py  resilience.py  run_context.py  runner.py  selector.py  session_context.py  tool_orchestrator.py  untrusted_content.py  usage_tracker.py  utils.py
tests/: _helpers.py  conftest.py  mcp_test_server.py  test_agent_loop.py  test_agent_loop_hooks.py  test_agent_tool.py  test_anthropic_converters.py  test_append_checkpoint_log.py  test_approval_store.py  test_autoresearch_tools.py  test_background_tools.py  test_before_tool_decision.py  test_callback_approval.py  test_checkpoint_fs_snapshot.py  test_checkpoint_metadata.py  test_checkpoint_schema_versioning.py  test_console.py  test_console_golden.py  test_context_serialization.py  test_durability_failures.py  test_durability_hardening.py  test_durability_resume.py  test_executor_integration.py  test_file_checkpoint_store.py  test_function_tool.py  test_gemini_converters.py  test_generics_mixin.py  test_input_attachments.py  test_integration_anthropic.py  test_integration_gemini.py  test_integration_litellm.py  test_integration_openai_completions.py  test_integration_openai_responses.py  test_items_to_messages.py  test_litellm_model_specific_settings.py  test_llm_core.py  test_llm_event_converters.py  test_llm_fixes.py  test_llm_policy_executor_after_generate_hook.py  test_llm_validation.py  (+57 more)
tests/agent/: test_agent_loop.py  test_agent_loop_hooks.py  test_agent_tool.py  test_approval_store.py  test_background_task_rewind.py  test_background_tools.py  test_before_tool_decision.py  test_callback_approval.py  test_generics_mixin.py  test_hook_stacking.py  test_human_turn_anchors.py  test_inbox.py  test_initial_context.py  test_loop_state.py  test_name_uniqueness.py  test_run_stream_cancel.py  test_tmp_subagent_result.py  test_tool_output_spill.py  test_transcript_builder.py
tests/agent_team/: test_agent_card.py  test_agent_team.py  test_member.py  test_message.py  test_prompt.py  test_resident_spike.py  test_send_message_tool.py  test_transport.py  test_wakeup.py
tests/anthropic/: test_cloud_platforms.py  test_converters.py  test_error_mapping.py  test_integration.py
tests/context/: test_compaction.py  test_input_attachments.py  test_projection.py  test_prompt_builder.py  test_run_context.py  test_session_context.py  test_standard_sections.py  test_summarization.py  test_untrusted_content.py
tests/durability/: test_append_checkpoint_log.py  test_checkpoint_fs_snapshot.py  test_checkpoint_metadata.py  test_checkpoint_schema_versioning.py  test_context_serialization.py  test_durability_failures.py  test_durability_opt_out.py  test_durability_resume.py  test_file_checkpoint_store.py  test_loop_durability.py  test_recursive_checkpointing.py  test_rollback.py  test_session_checkpoint.py  test_session_history.py  test_session_lifecycle.py  test_sessions.py  test_state_builder.py  test_subagent_session_isolation.py  test_workflow_durability.py
tests/gemini/: test_cloud_platforms.py  test_converters.py  test_error_mapping.py  test_integration.py
tests/golden/: background_tasks.expected  full_turn.expected  full_turn_no_thinking.expected  input_messages.expected  streaming_error.expected
tests/integration/: test_autoresearch_live.py  test_code_interpreter_live.py  test_demo_notebook_runs.py  test_durable_subagents_live.py  test_mcp_memory_live.py  test_memory_authoring_live.py  test_memory_notebook_live.py  test_orchestration_notebook_runs.py  test_tui_data_copilot.py
tests/litellm/: test_integration.py
tests/llm/: test_llm_core.py  test_llm_validation.py  test_model_info.py  test_provider_behavior.py  test_provider_converters.py  test_provider_imports.py  test_recovery_hints.py  test_resilience.py  test_retry_after_parsing.py  test_settings_forwarding.py  test_settings_validation.py  test_token_counting.py  test_usage_tracker.py
tests/mcp/: mcp_test_server.py  test_mcp.py
tests/memory/: test_mcp_memory_provider.py  test_memory.py  test_memory_agent.py  test_memory_injection.py  test_memory_provider.py  test_memory_selectors.py
tests/openai_completions/: test_azure.py  test_converters.py  test_error_mapping.py  test_integration.py  test_items_to_messages.py  test_stream_converter.py
tests/openai_responses/: test_agent_tool_integration.py  test_azure.py  test_converters.py  test_integration.py  test_server_state.py
tests/orchestration/: test_executor_integration.py  test_runner.py  test_runner_integration.py  test_shared_ctx.py  test_stream_concurrent.py
tests/runtime/: test_driver.py
tests/sandbox/: _bg_harness.py  test_bash_polish.py  test_bash_session.py  test_config.py  test_e2b.py  test_e2b_config.py  test_env_scrub.py  test_local_exec.py  test_local_kernel.py  test_local_session.py  test_srt.py  (+7 more)
(+471 files in other folders)
