[project]
name = "grasp_agents"
version = "0.7.0"
description = "Grasp Agents Library"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "openai==2.23.0",
    "litellm==1.82.0",
    "httpx>=0.27.0,<1",
    "pyyaml>=6.0.2,<7",
    # >=2.11: proper PEP 695 generics support (Packet/Event/RunContext use it)
    "pydantic>=2.11,<3",
    "opentelemetry-sdk>=1.37.0,<2",
    "rich>=14.0,<15",
    "python-dotenv>=1.0,<2",
]

[dependency-groups]
dev = [
    "types-cachetools>=5.0.1,<6",
    "pre-commit-uv>=4.1.4,<5",
    "twine>=5.1.1,<6",
    "ruff>=0.11.8,<1",
    "pyright>=1.1.400,<2",
    "pip-licenses>=5.0.0,<6",
    "pytest>=8,<9",
    "pytest-asyncio>=1.3.0,<2",
    "nbclient>=0.10.4,<1",
    "jupyter>=1.1.1",
    "ipython>=8.3.0,<9",
    "ipykernel>=6.19.1,<7",
    "ipywidgets>=8.0.4,<9",
    "matplotlib>=3.8,<4",
    "pytest-textual-snapshot>=1.0,<2",
]

[project.optional-dependencies]
anthropic = ["anthropic==0.84.0"]
gemini = ["google-genai==1.65.0"]
all-llm-providers = ["anthropic==0.84.0", "google-genai==1.65.0"]
e2b = ["e2b>=2.0,<3", "e2b-code-interpreter>=2.7.0,<3"]
mcp = ["mcp>=1.8,<2"]
notebook-edit = ["nbformat>=5.10.4,<6"]
notebook = [
    "nbformat>=5.10.4,<6",
    "jupyter-client>=8.7.0,<9",
    "ipykernel>=6.19.1,<7",
    "ipython>=8.3.0,<9",
]
phoenix = [
    "arize-phoenix-otel>=0.13.1,<1",
    "openinference-instrumentation-openllmetry>=0.1.2,<1",
    "openinference-instrumentation-openai>=0.1.32,<1",
    "openinference-instrumentation-litellm>=0.1.25,<1",
]
tui = [
    "textual>=8.0,<9",
    "textual-image>=0.13,<1",
    "rich-pixels>=3.0,<4",
    "chafa.py>=1.2,<2",
    "catppuccin>=2.5.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = ["integration: requires real API keys (skipped by default)"]
addopts = "-m 'not integration'"

[tool.hatch.build.targets.sdist]
include = ["src/grasp_agents"]
exclude = ["src/grasp_agents/examples", "*.ipynb"]

[tool.hatch.build.targets.wheel]
packages = ["src/grasp_agents"]
exclude = ["src/grasp_agents/examples", "*.ipynb"]

[tool.hatch.metadata]
allow-direct-references = true
